<resources>
    <string name="app_name">"INPUT vSTB 2.0"</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="play_on_smartphone">Play on Smartphone</string>
    <string name="play_on_dlna">Play on DLNA</string>
    <string name="play_on_both">Play on both</string>
    <string name="record">Record</string>
    <string name="close">Close</string>
    <string name="no_channels_available">No Channels available</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="txt_btn_stop">Stop</string>
    <string name="txt_btn_pause">Pause</string>
    <string name="txt_recording_placeholder">No recordings</string>
</resources>
