<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_on_smartphone"
        android:orderInCategory="100"
        android:title="@string/play_on_smartphone"
         />
    <item
        android:id="@+id/action_on_dlna"
        android:orderInCategory="100"
        android:title="@string/play_on_dlna"
        />
    <item
        android:id="@+id/action_on_both"
        android:orderInCategory="100"
        android:title="@string/play_on_both"
        />
    <item
        android:id="@+id/action_record"
        android:orderInCategory="100"
        android:title="@string/record"
        />
    <item
        android:id="@+id/action_close"
        android:orderInCategory="100"
        android:title="@string/close"
        />

</menu>